--- a/platform-config.yaml
+++ b/platform-config.yaml
@@ -1,44 +1,22 @@
-version: '3.7'
+organization:
+  name: default
 
-networks:
-  kafka-net:
-    driver: bridge
+clusters:
+  - id: my-kafka-cluster
+    name: My Kafka Cluster
+    bootstrapServers: "my-bootstrap-server:9092"
+    properties: |
+      security.protocol=SASL_SSL
+      sasl.mechanism=PLAIN
+      sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username='username' password='password';
+    schemaRegistry:
+      id: my-schema-registry
+      url: "http://my-schema-registry:8081"
+      security:
+        username: "username"
+        password: "password"
 
-services:
-  zookeeper-server:
-    image: 'bitnami/zookeeper:latest'
-    networks:
-      - kafka-net
-    ports:
-      - '2181:2181'
-    environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
-  kafka-server1:
-    image: 'bitnami/kafka:latest'
-    networks:
-      - kafka-net
-    ports:
-      - '9092:9092'
-    environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper-server:2181
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
-      - ALLOW_PLAINTEXT_LISTENER=yes
-    depends_on:
-      - zookeeper-server
-  # conduktor-platform:
-  #   image: conduktor/conduktor-platform:latest
-  #   ports:
-  #     - 8080:8080
-  #   volumes:
-  #     - conduktor_data:/var/conduktor
-  #     - type: bind
-  #       source: "./platform-config.yaml"
-  #       target: /opt/conduktor/platform-config.yaml
-  #       read_only: true
-  #   depends_on:
-  #     - kafka-server1
-  #   environment:
-  #     CDK_IN_CONF_FILE: /opt/conduktor/platform-config.yaml
-  #     ORGANISATION_NAME: "default"
-  #     ADMIN_EMAIL: "admin@admin.io"
-  #     ADMIN_PSW: "admin"
+auth:
+  demo-users:
+    - email: admin@conduktor.io
+      password: admin
